added unit tests and augmented userDAO

--- a/SWDesignPrinciples.ipynb
+++ b/SWDesignPrinciples.ipynb
@@ -18,16 +18,6 @@
     "## D.R.Y.\n",
     "Don't **repeat** yourself<br>\n",
     "The prime *directive* \n",
-    "- one\n",
-    "- two\n",
-    "- three\n",
-    "\n",
-    "1. one\n",
-    "2. two\n",
-    "3. three\n",
-    "\n",
-    "[Python Website](https://www.python.org)\n",
-    "\n",
     "\n",
     "## Use Type Hints\n",
     "```\n",
@@ -38,7 +28,14 @@
     "        self.email = email\n",
     "        self.active = active\n",
     "        pass\n",
-    "```"
+    "```\n",
+    "## Python Data Model\n",
+    "implement\n",
+    "__init__ - constructor\n",
+    "__len__ - object can handle len(obj)\n",
+    "__getitem__ - item can be extracted from list, iterated and sliced\n",
+    "__str__ - item can be converted into a string\n",
+    "__repr__ - item can be represented in a debugger \n"
    ]
   }
  ],
